--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -612,6 +612,25 @@
   number = {6}
 }
 
+@article{blankenEnergyBalanceCanopy1997,
+  title = {Energy Balance and Canopy Conductance of a Boreal Aspen Forest: {{Partitioning}} Overstory and Understory Components},
+  shorttitle = {Energy Balance and Canopy Conductance of a Boreal Aspen Forest},
+  author = {Blanken, P. D. and Black, T. A. and Yang, P. C. and Neumann, H. H. and Nesic, Z. and Staebler, R. and den Hartog, G. and Novak, M. D. and Lee, X.},
+  date = {1997},
+  journaltitle = {Journal of Geophysical Research: Atmospheres},
+  volume = {102},
+  pages = {28915--28927},
+  issn = {2156-2202},
+  doi = {10.1029/97JD00193},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/97JD00193},
+  urldate = {2021-04-12},
+  abstract = {The energy balance components were measured throughout most of 1994 in and above a southern boreal aspen (Populus tremuloides Michx.) forest (53.629°N 106.200°W) with a hazelnut (Corylus cornuta Marsh.) understory as part of the Boreal Ecosystem-Atmosphere Study. The turbulent fluxes were measured at both levels using the eddy-covariance technique. After rejection of suspect data due to instationarity or inhomogeneity, occasional erratic behavior in turbulent fluxes and lack of energy balance closure led to a recalculation of the fluxes of sensible and latent heat using their ratio and the available energy. The seasonal development in leaf area was reflected in a strong seasonal pattern of the energy balance. Leaf growth began during the third week of May with a maximum forest leaf area index of 5.6 m2 m−2 reached by mid-July. During the full-leaf period, aspen and hazelnut accounted for approximately 40 and 60\% of the forest leaf area, respectively. Sensible heat was the dominant consumer of forest net radiation during the preleaf period, while latent heat accounted for the majority of forest net radiation during the leafed period. Hazelnut transpiration accounted for 25\% of the forest transpiration during the summer months. During the full-leaf period (June 1 to September 7) daytime dry-canopy mean aspen and hazelnut canopy conductances were 330 mmol m−2 s−1 (8.4 mm s−1) (70\% of the total forest conductance) and 113 mmol m−2 s−1 (2.9 mm s−1) (24\% of the total forest conductance), respectively. Maximum aspen and hazelnut canopy conductances were 1200 mmol m−2 s−1 (30 mm s−1) and 910 mmol m−2 s−1 (23 mm s−1 ), respectively, and maximum stomatal conductances were 490 mmol m−2 s−1 (12.5 mm s−1) and 280 mmol m−2 s−1 (7 m s−1), aspen and hazelnut, respectively. Both species showed a decrease in canopy conductance as the saturation deficit increased and both showed an increase in canopy conductance as the photosynthetic active radiation increased. There was a linear relationship between forest leaf area index and forest canopy conductance. The timing, duration, and maximum leaf area of this deciduous boreal forest was found to be an important control on transpiration at both levels of the canopy. The full-leaf hazelnut daytime mean Priestley and Taylor [1972] α coefficient of 1.22 indicated transpiration was largely energy controlled and the quantity of energy received at the hazelnut surface was a function of aspen leaf area. The full-leaf aspen daytime mean α of 0.91 indicated some stomatal control on transpiration, with a directly proportional relationship between forest leaf area and forest canopy conductance, varying α during much of the season through a range very sensitive to regional scale transpiration and surface-convective boundary layer feedbacks.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/97JD00193},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UPX4QS5D\\Blanken et al. - 1997 - Energy balance and canopy conductance of a boreal .pdf;C\:\\Users\\Me\\Zotero\\storage\\ZTLX497S\\97JD00193.html},
+  langid = {english},
+  number = {D24}
+}
+
 @article{blonderLowPredictabilityEnergy2020,
   title = {Low Predictability of Energy Balance Traits and Leaf Temperature Metrics in Desert, Montane and Alpine Plant Communities},
   author = {Blonder, Benjamin and Escobar, Sabastian and Kapás, Rozália E. and Michaletz, Sean T.},
@@ -2329,6 +2348,22 @@
   issue = {12},
   langid = {english},
   number = {12}
+}
+
+@article{hadleyInfluenceKrummholzMat1987,
+  title = {Influence of {{Krummholz Mat Microclimate}} on {{Needle Physiology}} and {{Survival}}},
+  author = {Hadley, J. L. and Smith, W. K.},
+  date = {1987},
+  journaltitle = {Oecologia},
+  volume = {73},
+  pages = {82--90},
+  publisher = {{Springer}},
+  issn = {0029-8549},
+  abstract = {Microclimate and photosynthesis of krummholz mat growth forms of Picea engelmanii (Parry) and Abies lasiocarpa [Hook.] Nutt. were investigated to determine structural features which may aid survival in alpine environments. The structure of krummholz mats was described in terms of the vertical distribution of leaf area index and leaf area density, which exceeded 50 m-1 (based on total leaf surface area) near the canopy surface and approached zero below 30 cm from the surface in both species. Photosynthetic photon flux density (PPFD, 0.4-0.7 μm wavelengths) and wind decreased by an average of 6 and 50-fold, respectively, between 1 m above and 10 cm below mat surfaces in both species. Needle temperatures on a P. engelmannii krummholz mat during July averaged about 2° C above air temperature during the day, with a maximum overtemperature of greater than 20° C above \$T\_\{\textbackslash text\{air\}\}\$ during one sunlit period. At night, needle temperatures averaged 3-4° C below \$T\_\{\textbackslash text\{air\}\}\$. Net photosynthesis in year-old P. engelmannii shoots reached a maximum at 15-20° C during July and August. Surface shoots were light saturated at near 1200 μmoles m-2 s-1 PPFD, and had higher photosynthetic rates than subsurface, predominantly shaded shoots above 800 μmoles m-2 s-1. Shade shoots had higher photosynthetic rates when PPFD was below 600 μmoles m-2 s-1, and at 250 μmoles m-2 s-1 shade shoots maintained about 50\% of the net photosynthetic rate of sun shoots at light saturation. Shade shoots appeared capable of benefitting photosynthetically from elevated temperatures within krummholz mats despite relatively low light levels. Especially rapid photosynthesis may occur when canopy needles are illuminated by sunflecks and needle temperatures rise by 10° C or more. Snow cover appears crucial for the survival of needles during winter. Snow accumulated within krummholz needle canopies before the sub-canopy zone of unfoliated branches became filled. The concentrated needle growth in the krummholz canopy captured snow in early autumn without support from ground-level snowpack. Early snow cover in both species prevented cuticle abrasion and resulted in high winter needle water contents and viabilities for subsurface compared to surface needles which became abraded, severely dehydrated, and had high mortality between December and February, especially on windward sides of shoots. Extremely high concentrations of needles within krummholz mat canopies created an aerodynamic structure which elevated needle temperatures to more optimal photosynthetic levels in summer and resulted in more efficient snow accumulation in winter. These factors appear crucial for winter needle survival. Thus, krummholz mats appear to be an important adaptation in growth form which provides survival benefits in both summer and winter.},
+  eprint = {4218333},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\R5WD89Y5\\Hadley and Smith - 1987 - Influence of Krummholz Mat Microclimate on Needle .pdf},
+  number = {1}
 }
 
 @article{harleyEffectsLightTemperature1996,
@@ -6926,6 +6961,23 @@
   keywords = {Amazon forest,climate change,El Niño drought,forest canopy structure,leaf area,LiDAR remote sensing,phenology},
   langid = {english},
   number = {3}
+}
+
+@article{smithShootStructuralEffects1988,
+  title = {Shoot {{Structural Effects}} on {{Needle Temperatures}} and {{Photosynthesis}} in {{Conifers}}},
+  author = {Smith, William K. and Carter, Gregory A.},
+  date = {1988},
+  journaltitle = {American Journal of Botany},
+  volume = {75},
+  pages = {496--500},
+  publisher = {{Botanical Society of America}},
+  issn = {0002-9122},
+  doi = {10.2307/2444214},
+  abstract = {Greater needle packing (number of needles per unit stem length) among shoots of Picea engelmannii (Parry ex. Engelm.), Abies lasiocarpa ([Hook] Nutt.), and Pinus contorta (Engelm.) collected at sun-exposed locations resulted in leaf temperatures (T1) that were well above air temperature (Ta) and which were closer to optimum for maximum photosynthesis under field conditions. Maximum photosynthesis in these species occurred at leaf temperatures well above mean maximum Ta during most of the summer growth period. An approximate doubling in needle packing on sun shoots of these species, however, led to an estimated temperature enhancement of daily photosynthetic carbon gain of 21 to 36\% compared to estimations assuming T1 = Ta for the entire day Elevated T1 due to needle packing may lead to substantial increases in summer carbon gain for conifers experiencing cold-limited, short growth seasons.},
+  eprint = {2444214},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\T4BCPRUR\\Smith and Carter - 1988 - Shoot Structural Effects on Needle Temperatures an.pdf},
+  number = {4}
 }
 
 @article{songTreeSurfaceTemperature2020,
