--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,13 +174,13 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015; @juckerCanopyStructureTopography2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity and greater light permeability through canopies. They maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to radiative heat loss from the soil caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021; @davis_microclimatic_2019; @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with canopy cover [S. R. Hardwick et al. 2015; @juckerCanopyStructureTopography2018]. Pine or needle-leaf forests, on the other hand, that are open-forests with sparse stands have lower buffering capacity, greater vertical air mixing and greater light permeability through canopies. They maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999;]. During the night, these pine forests have been observed to maintain warmer understory temperatures than above canopy, due to infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018]. 
 
-Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
 Under colder conditions (?), minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; Defrenne et al. 2021] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
-Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021],though, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed. [@bertrandCommentForestMicroclimate2020]
+Thus, we see that buffering by canopy cover smooths the affect temperature extremes and fluctuation in the understory [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory; Defrenne et al. 2021],though, as a result of global rise in temperatures, inevitable increases in understory temperatures continue to be observed [@bertrandCommentForestMicroclimate2020].
 
 *(Add something about risk of freeze.)* 
 
@@ -189,7 +189,7 @@ Thus, we see that buffering by canopy cover smooths the affect temperature extre
 - DETAILS - REFS
 - @mcgregor_tree_nodate
 
-Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates, which tends to decrease with increasing maximum temperature. In three European forests (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
+Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates, which tends to decrease with increasing maximum temperature. In three European forests (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area.RH moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
 RH, in combination with temperature, determines vapor pressure deficit ($VPD$), an important metric expressing the driving force of water loss from a leaf. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017]. This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
 
@@ -200,51 +200,49 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity is stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. Trees in European high altitude forests have shown to maintain sparser stands [@vonarxSpatiotemporalEffectsForest2012a] and open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate humid-mountain forests in China, tree height decreased with 
-altitude, whereas tree growth sensitivity (based on tree-rings) to climate change increased [@liangForestTypeHeight2019]. Less capacity to buffer climatic conditions in open, high altitude forests might thus have implications to forest regeneration [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018].The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In European forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a]. In a few European high altitude forests, trees are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] and have open canopies with greater light interception through canopy layers, and to the understory [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. While increase in tree height (in closed-forests) typically increases buffering in the understory [@juckerCanopyStructureTopography2018], in timberline and temperate humid-mountain forests in China, tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) to climate change increased [@liangForestTypeHeight2019]. Less capacity to buffer climatic conditions in open, high altitude forests might thus have implications to forest regeneration [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018].
+
+The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
 ## Leaf temperature 
 
 ### Biophysical drivers
 
-**Many of the biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-$T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`).
-Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020] 
-The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy as radiation input versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+**Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
+Leaves try to maintain metabolic optima in order to maximize carbon assimilation, in a given circumstance, through the adaptation of their leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. $T_{leaf}$ and leaf thermoregulation, thus, is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$ [Fauset et al. 2018]
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
 In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ in the upper canopy can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. 
-Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006] this tends to be greater in the understory than canopy? [*REF*]
+Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. This tends to be greater in the understory than in the canopy [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
-Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
-Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance. 
-However, increase in air temperature typically also increases VPD, decrease in stomatal conductance during midday lead to a decrease in leaf CO~2~, and consequently increasing leaf temperature in upper canopy [@fauset_differences_2018]. 
-Thus, their $T_{leaf}$ can be highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low.
+Leaf temperature, is also influenced by stomtal conductance and leaf water content [*Koch et al. 1994*]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
+Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance.  However, in circumstances such as during the midday, $T_{leaf}$ can become highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low. This is caused by increase in air temperature and VPD, which limits stomatal conductance along with decreased leaf water content and leaf CO~2~ [*Koch et al. 1994*; @fauset_differences_2018]. On the other, shaded understory leaves under closed canopies should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
 *Smaller leaves have higher $g_{a}$ to heat transfer, allowing them to dissipate heat more efficiently than larger leaves [@bauerleSeparatingFoliarPhysiology2011; @leighInfluenceLeafSize2017].  
-While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. 
-Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed. 
+While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature [@fauset_differences_2018]. Large leaves (with greater leaf width) can be significantly cooler than $T_{air}$ under low radiation with stomata open [@leighInfluenceLeafSize2017], and significantly hotter under high radiation with stomata closed. 
 
 
 ### In-situ observations
 
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
-While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
-In open-canopy needle-leaf forests, light permeating through canopy layers can influence understory leaf temperatures, such that even with understories maintaing $T_{air}$ lower than above canopy $T_{air}$, lower canopy $T_{leaf}$ can be substantially warmer than above canopy, even in moist conditions [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]  
-In closed-forests, under some conditions $T_{leaf}$ tracks  $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
-For instance, during the dry season in a semi-decidudous tropical moist forest in Panama [@rey-sanchez_spatial_2016]. Sun leaves can also be cooled relative to $T_{air}$ more than shade leaves [@rey-sanchez_spatial_2016]. 
+Vertical gradient in leaf processes and leaf temperature is influenced by vertical microclimate profile. While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
+
+In open forests, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of increased vertical air mixing, heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in an Australian open desert forest [Curtis et al.] and among timberline krummholz needle-leaf trees growing close to the ground 
+[@hadleyInfluenceKrummholzMat1987].  Similarly, during the dry season in a semi-decidudous tropical moist forest in Panama, sun leaves can also be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
--Large leaf to air temperature differences and high leaf temperatures were found in upper canopy of Atlantic, Brazil forests due to high solar radiation loads. However, leaf temperatures themselves were moderated by air temperature. [@fauset_differences_2018].
+In closed-canopy forests, large leaf to air temperature differences and high leaf temperatures are found in upper canopies of tropical forests such as in Atlantic, Brazil forests [@fauset_differences_2018], Puerto Rico tropical wet, moist and subtropical wet forest[@mauTemperateTropicalForest2018a; Miller; ], semi-deciduous tropical forest in Panama in wet season [@rey-sanchez_spatial_2016], and in a temperate forest [@mauTemperateTropicalForest2018a].   
+
 - In three forest types-- temperate, tropical wet and tropical moist, $T_{leaf max}$ exceeded temperature optimum for photosynthesis $T_{opt}$ in upper canopies of all sites, however $T_{leaf max}$ exceeded $T_{opt}$ at different heights and temperatures in all forests; with no significant relationship between $T_{opt}$ and height. Additionally, with increasing height, $T_{leaf} - T_{air}$ difference increased in the upper canopies of all forests, exhibiting greatest $T_{leaf} - T_{air}$ in temperate deciduous forest compared to tropical moist and wet.
 - In a tropical wet and moist forests of Puerto Rico and temperate forests in Michigan, greater light input in exposed upper canopy leaves has been observed to increase leaf temperatures, sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress, more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a] 
 -"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
@@ -256,7 +254,7 @@ At night when solar radiation is not a factor, differences in $T_{leaf}$ across 
 - Sellin, A. and Lubenets, K., 2010. Variation of transpiration within a canopy of silver birch: effect of canopy position and daily versus nightly water loss. Ecohydrology, 3(4), pp.467-477.
 
 
-**Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
+**Leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of intraspecific foliar plasticity in accordance with the intensity and availability of light, for optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
 After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
 
 
