--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3008,6 +3008,56 @@
   langid = {english}
 }
 
+@article{kochDiurnalPatternsLeaf1994,
+  title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
+  shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
+  author = {Koch, George W. and Amthor, Jeffrey S. and Goulden, Michael L.},
+  date = {1994-04-01},
+  journaltitle = {Tree Physiology},
+  volume = {14},
+  pages = {347--360},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/14.4.347},
+  url = {https://doi.org/10.1093/treephys/14.4.347},
+  urldate = {2021-04-13},
+  abstract = {Diurnal patterns of leaf conductance, net photosynthesis and water potential of five tree species were measured at the top of the canopy in a tropical lowland rain forest in southwestern Cameroon. Access to the 40 m canopy was by a large canopy-supported raft, the Radeau des Cimes. The measurements were made under ambient conditions, but the raft altered the local energy balance at times, resulting in elevated leaf temperatures. Leaf water potential was equal to or greater than the gravitational potential at 40 m in the early morning, falling to values as low as –3.0 MPa near midday. Net photosynthesis and conductance were typically highest during midmorning, with values of about 10–12 μmol CO2 m−2 s−1 and 0.2–0.3 mol H2O m−2 s−1, respectively. Leaf conductance and net photosynthesis commonly declined through midday with occasional recovery late in the day. Photosynthesis was negatively related to leaf temperature above midday air temperature maxima. These patterns were similar to those observed in other seasonally droughted evergreen communities, such as Mediterranean-climate shrubs, and indicate that environmental factors may cause stomatal closure and limit photosynthesis in tropical rain forests during the midday period.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NBSEPJT6\\Koch et al. - 1994 - Diurnal patterns of leaf photosynthesis, conductan.pdf},
+  number = {4}
+}
+
+@article{kochDiurnalPatternsLeaf1994a,
+  title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
+  shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
+  author = {Koch, G. W. and Amthor, J. S. and Goulden, M. L.},
+  date = {1994-04-01},
+  journaltitle = {Tree Physiology},
+  volume = {14},
+  pages = {347--360},
+  issn = {0829-318X, 1758-4469},
+  doi = {10.1093/treephys/14.4.347},
+  url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/14.4.347},
+  urldate = {2021-04-13},
+  langid = {english},
+  number = {4}
+}
+
+@article{kochDiurnalPatternsLeaf1994b,
+  title = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}: Measurements from the {{Radeau}} Des {{Cimes}}},
+  shorttitle = {Diurnal Patterns of Leaf Photosynthesis, Conductance and Water Potential at the Top of a Lowland Rain Forest Canopy in {{Cameroon}}},
+  author = {Koch, George W. and Amthor, Jeffrey S. and Goulden, Michael L.},
+  date = {1994-04-01},
+  journaltitle = {Tree Physiology},
+  volume = {14},
+  pages = {347--360},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/14.4.347},
+  url = {https://doi.org/10.1093/treephys/14.4.347},
+  urldate = {2021-04-13},
+  abstract = {Diurnal patterns of leaf conductance, net photosynthesis and water potential of five tree species were measured at the top of the canopy in a tropical lowland rain forest in southwestern Cameroon. Access to the 40 m canopy was by a large canopy-supported raft, the Radeau des Cimes. The measurements were made under ambient conditions, but the raft altered the local energy balance at times, resulting in elevated leaf temperatures. Leaf water potential was equal to or greater than the gravitational potential at 40 m in the early morning, falling to values as low as –3.0 MPa near midday. Net photosynthesis and conductance were typically highest during midmorning, with values of about 10–12 μmol CO2 m−2 s−1 and 0.2–0.3 mol H2O m−2 s−1, respectively. Leaf conductance and net photosynthesis commonly declined through midday with occasional recovery late in the day. Photosynthesis was negatively related to leaf temperature above midday air temperature maxima. These patterns were similar to those observed in other seasonally droughted evergreen communities, such as Mediterranean-climate shrubs, and indicate that environmental factors may cause stomatal closure and limit photosynthesis in tropical rain forests during the midday period.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8CNP6YYB\\Koch et al. - 1994 - Diurnal patterns of leaf photosynthesis, conductan.pdf},
+  number = {4}
+}
+
 @article{koike_leaf_2001,
   title = {Leaf Morphology and Photosynthetic Adjustments among Deciduous Broad-Leaved Trees within the Vertical Canopy Profile},
   author = {Koike, Takayoshi and Kitao, Mitsutoshi and Maruyama, Yutaka and Mori, Shigeta and Lei, Thomasi T.},
